content/_generated-doc/2.7/config/quarkus-config-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-config-config_configuration]]link:#quarkus-config-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-config-config_quarkus.config.locations]]`link:#quarkus-config-config_quarkus.config.locations[quarkus.config.locations]`

[.description]
--
Additional config locations to be loaded with the Config. The configuration support multiple locations separated by a comma and each must represent a valid `java.net.URI`.
--|list of link:https://docs.oracle.com/javase/8/docs/api/java/net/URI.html[URI]
 
|


a| [[quarkus-config-config_quarkus.config.profile.parent]]`link:#quarkus-config-config_quarkus.config.profile.parent[quarkus.config.profile.parent]`

[.description]
--
Accepts a single configuration profile name. If a configuration property cannot be found in the current active profile, the config performs the same lookup in the profile set by this configuration.
--|string 
|


a| [[quarkus-config-config_quarkus.uuid]]`link:#quarkus-config-config_quarkus.uuid[quarkus.uuid]`

[.description]
--
A property that allows accessing a generated UUID. It generates that UUID at startup time. So it changes between two starts including in dev mode. Access this generated UUID using expressions: `$++{++quarkus.uuid++}++`.
--|string 
|

|===